hphp/hack/test/typecheck/shape/disable_optional_and_unknown_shape_fields/shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php.exp
File "shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php", line 8, characters 14-15:
Invalid argument (Typing[4110])
File "shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php", line 5, characters 44-47:
This is a nullable type
File "shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php", line 7, characters 38-40:
It is incompatible with an int
File "shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php", line 5, characters 31-35:
Considering that this type argument is invariant with respect to MyWrapper
