hphp/hack/test/typecheck/shape/disable_optional_and_unknown_shape_fields/shape_unification_disallows_providing_required_field_where_nullable_field_is_consumed.php
<?hh

class MyWrapper<T> {}

function take_shape(MyWrapper<shape('x' => ?int)> $x): void {}

function test(MyWrapper<shape('x' => int)> $x): void {
  take_shape($x);
}
